--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
     "background":{
         "service_worker": "background.js"
     },
-    "permissions": ["storage", "activeTab", "scripting"]
+    "permissions": ["storage", "activeTab", "scripting", "tabs"]
 }
