--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,6 @@
     },    
     "background":{
         "service_worker": "background.js"
-    },
-    "permissions": ["storage", "activeTab", "scripting", "tabs"]
+    }, 
+    "permissions": ["storage", "activeTab", "scripting", "tabs", "notifications"]
 }
